--- a/canvas_modules/common-canvas/package.json
+++ b/canvas_modules/common-canvas/package.json
@@ -25,6 +25,7 @@
     "codemirror": "5.43.0",
     "d3": "4.10.0",
     "dagre": "0.8.4",
+    "immutable": "4.0.0-rc.12",
     "immutable-undo": "2.0.0",
     "jsonschema": "1.2.4",
     "lodash": "4.17.11",
@@ -70,7 +71,7 @@
     "grunt-yamllint": "0.3.0",
     "jest": "24.1.0",
     "jest-localstorage-mock": "2.4.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "path": "0.12.7",
     "postcss-loader": "3.0.0",
