--- a/canvas_modules/harness/package.json
+++ b/canvas_modules/harness/package.json
@@ -8,30 +8,31 @@
     "bundle-report": "webpack-bundle-analyzer --host 127.0.0.1 --port 8888 .build/stats.json"
   },
   "engines": {
-    "node": "8.11.x",
+    "node": "8.15.x",
     "npm": "5.6"
   },
   "dependencies": {
-    "body-parser": "1.17.2",
-    "express": "4.15.3",
-    "express-session": "1.15.4",
+    "body-parser": "1.18.3",
+    "express": "4.16.4",
+    "express-session": "1.15.6",
     "isomorphic-fetch": "2.2.1",
     "log4js": "0.6.32",
-    "nconf": "0.8.4",
-    "node-sass": "4.5.3"
+    "nconf": "0.10.0",
+    "node-sass": "4.11.0"
   },
   "devDependencies": {
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.3.1",
+    "@babel/preset-react": "7.0.0",
     "@dap/eslint-config-portal-common": "1.0.0",
     "@wdp/common-canvas": "file:../common-canvas",
-    "autoprefixer": "7.1.2",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
+    "autoprefixer": "9.4.7",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "8.0.5",
     "babel-preset-react-hmre": "1.1.1",
-    "carbon-components": "8.20.0",
-    "carbon-components-react": "5.47.4",
-    "carbon-icons": "6.3.2",
+    "carbon-components": "9.74.4",
+    "carbon-components-react": "6.93.2",
+    "carbon-icons": "7.0.7",
     "chimp": "0.51.1",
     "compression-webpack-plugin": "1.1.2",
     "codemirror": "5.33",
@@ -51,7 +52,7 @@
     "grunt-yamllint": "0.3.0",
     "html-webpack-plugin": "2.30.1",
     "ibm-design-icons": "2.1.3",
-    "lodash": "4.17.4",
+    "lodash": "4.17.11",
     "object-assign": "4.1.1",
     "path": "0.12.7",
     "postcss": "6.0.8",
